Updated Top bar design

--- a/public/index.html
+++ b/public/index.html
@@ -8,29 +8,24 @@
     <body>
         <div class="top_bar">
             <div class="left_items">
-                <h1>Acoustic Neural Input System</h1>
+                <h3>Acoustic Neural Input System</h3>
             </div>
+            <div class="spacer"></div>
             <div class="right_items">
                 <button id="panel-toggle">☰</button>
                 <button id="theme-toggle">
                     <img id='mode' src="../Icons/moon.png" width="24" height="24">
                 </button>
+                <button id="move-to-brain"><img id='brain-img' src='../Icons/brain_white.png' width="20" height="20"><span class="hover-text">Switch to brain</span></button>
             </div>
         </div>
         <div class="container1">
-        <div class="segmented">
-            <button class="active" id="brainBtn">BRAIN</button>
-            <button id="voiceBtn">VOICE</button>
-        </div>
-        </div>
-        <div>
-            <h1>Sis</h1>
-        </div>
-        <div>
+            <h4>C3-C4 Differential Signals</h4>
             <div id="eeg-panel">
                 <canvas id="eegChart"></canvas>
              </div>
         </div>
+        
         
         <div id="chatbot-panel" class="hidden">
             <div class="chat-header">A.N.I.S
