More design, enhanced transition and not found div

--- a/junk.html
+++ b/junk.html
@@ -2,3 +2,10 @@
             <button class="active" id="brainBtn">BRAIN</button>
             <button id="voiceBtn">VOICE</button>
         </div>
+
+
+<div class="notfound">
+    <img class='not-found-image' src="../Icons/not-found.png">
+    <p>Sorry Not found</p>
+
+</div>
